fix spinner overlap on filters

--- a/src/app/shared/styles/material/mat-table.scss
+++ b/src/app/shared/styles/material/mat-table.scss
@@ -65,7 +65,7 @@ mat-table.rounded-table {
 
 .spinner-container {
     position: absolute;
-    z-index: 101;
+    z-index: 999;
     top: 0;
     left: 0;
     width: 100%;
